--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -3,14 +3,14 @@
 <head>
     <title>Flow Table Navigator</title>
 
-
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="http://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet" type="text/css">
-    <!--    <link href="http://cdn.datatables.net/responsive/1.0.6/css/dataTables.responsive.css" rel="stylesheet" type="text/css">-->
+    <link href="http://cdn.datatables.net/responsive/1.0.6/css/dataTables.responsive.css" rel="stylesheet" type="text/css">
 
 
     <link href="css/jquery.slidepanel.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/horizontalBars.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/jquery.slidepanel.js"></script>
@@ -19,12 +19,15 @@
 
 
     <script type="text/javascript" src="http://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
-    <!--    <script type="text/javascript" src="http://cdn.datatables.net/responsive/1.0.6/js/dataTables.responsive.min.js"></script>-->
     <script type="text/javascript" src="http://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+    <script type="text/javascript" src="js/d3.min.js"></script>
+
 
 
     <script type="text/javascript" src="js/loadPanel.js"></script>
     <script type="text/javascript" src="js/buildContent.js"></script>
+    <script type="text/javascript" src="js/buildCharts.js"></script>
+    <script type="text/javascript" src="js/horizontalBars.js"></script>
 
 </head>
 
