--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="js/buildContent.js"></script>
     <script type="text/javascript" src="js/buildCharts.js"></script>
     <script type="text/javascript" src="js/horizontalBars.js"></script>
+    <script type="text/javascript" src="js/ip_calc.js"></script>
 
 </head>
 
