Aggiunta bozza dell'albero (senza dati) per verificare l'occupazione dello spazio sulla pagina

--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -26,6 +26,7 @@
 
     <script type="text/javascript" src="js/loadPanel.js"></script>
     <script type="text/javascript" src="js/buildContent.js"></script>
+    <script type="text/javascript" src="js/tree.js"></script>
     <script type="text/javascript" src="js/buildCharts.js"></script>
     <script type="text/javascript" src="js/horizontalBars.js"></script>
     <script type="text/javascript" src="js/ip_calc.js"></script>
