Aggiunto pulsante per nascondere la tabella

--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -17,7 +17,7 @@
 
 
 
-
+    <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="http://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
     <script type="text/javascript" src="js/d3.min.js"></script>
@@ -26,10 +26,12 @@
 
     <script type="text/javascript" src="js/loadPanel.js"></script>
     <script type="text/javascript" src="js/buildContent.js"></script>
+    <script type="text/javascript" src="js/buildTreeGraph.js"></script>
     <script type="text/javascript" src="js/tree.js"></script>
     <script type="text/javascript" src="js/buildCharts.js"></script>
     <script type="text/javascript" src="js/horizontalBars.js"></script>
     <script type="text/javascript" src="js/ip_calc.js"></script>
+
 
 </head>
 
