Aggiunta prima bozza versione avanzata

--- a/WebPage/external.html
+++ b/WebPage/external.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Flow Table Navigator</title>
-
+    <meta http-equiv="Cache-Control" content="no-store" />
     <script type="text/javascript" src="js/loadNodesTable.js"></script>
 
 </head>
@@ -12,6 +12,15 @@
     <br>
     <h1>Nodi della rete</h1>
     <table id="nodes" class="table table-striped table-bordered table-hover" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Tipo</th>
+            </tr>
+        </thead>
+    </table>
+    <br>
+    <table id="nodes2" class="table table-striped table-bordered table-hover" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Nome</th>
