--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -22,15 +22,15 @@
     <script type="text/javascript" src="http://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
     <script type="text/javascript" src="js/d3.min.js"></script>
 
-
-
     <script type="text/javascript" src="js/loadPanel.js"></script>
     <script type="text/javascript" src="js/buildContent.js"></script>
+    <script type="text/javascript" src="js/buildContentAdvanced.js"></script>
     <script type="text/javascript" src="js/buildTreeGraph.js"></script>
     <script type="text/javascript" src="js/tree.js"></script>
     <script type="text/javascript" src="js/buildCharts.js"></script>
     <script type="text/javascript" src="js/horizontalBars.js"></script>
     <script type="text/javascript" src="js/ip_calc.js"></script>
+    <script type="text/javascript" src="js/navbar.js"></script>
 
 
 </head>
@@ -39,6 +39,12 @@
     <br>
     <br>
     <div class="container wrapper">
+        <ul class="nav nav-tabs" id="myTabs">
+            <li role="presentation" class="active"><a href="#base">Base</a>
+            </li>
+            <li role="presentation"><a href="#advanced">Confronta due switch</a>
+            </li>
+        </ul>
         <h2 id=title>Selezionare un nodo della rete dalla lista: </h2>
         <hr>
         <a class="btn btn-default" href="external.html" role="button" data-slidepanel="panel">Mostra/Nascondi i nodi</a>
