Sistemato un bug sul secondo grafico (ora visualizza il numero corretto di pacchetti), Sistemata la visualizzazione dei grafici su Firefox, Aggiunta label con caratteristiche salienti della flow entry nel terzo grafico

--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -11,6 +11,7 @@
     <link href="css/jquery.slidepanel.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/horizontalBars.css" rel="stylesheet" type="text/css">
+    <link href="css/tipsy.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/jquery.slidepanel.js"></script>
@@ -21,6 +22,7 @@
     <script type="text/javascript" src="http://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="http://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
     <script type="text/javascript" src="js/d3.min.js"></script>
+    <script type="text/javascript" src="js/jquery.tipsy.js"></script>
 
     <script type="text/javascript" src="js/loadPanel.js"></script>
     <script type="text/javascript" src="js/buildContent.js"></script>
