correzione bug generici

--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="js/loadPanel.js"></script>
     <script type="text/javascript" src="js/buildContent.js"></script>
     <script type="text/javascript" src="js/buildContentAdvanced.js"></script>
+    <script type="text/javascript" src="js/matchedField.js"></script>
     <script type="text/javascript" src="js/buildTreeGraph.js"></script>
     <script type="text/javascript" src="js/tree.js"></script>
     <script type="text/javascript" src="js/buildCharts.js"></script>
