Implementata bozza quarto grafico

--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -12,6 +12,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/horizontalBars.css" rel="stylesheet" type="text/css">
     <link href="css/tipsy.css" rel="stylesheet" type="text/css">
+    <link href="css/focusContext.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/jquery.slidepanel.js"></script>
@@ -32,6 +33,7 @@
     <script type="text/javascript" src="js/tree.js"></script>
     <script type="text/javascript" src="js/buildCharts.js"></script>
     <script type="text/javascript" src="js/horizontalBars.js"></script>
+    <script type="text/javascript" src="js/focusContext.js"></script>
     <script type="text/javascript" src="js/ip_calc.js"></script>
     <script type="text/javascript" src="js/navbar.js"></script>
 
