--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="js/buildContentAdvanced.js"></script>
     <script type="text/javascript" src="js/matchedField.js"></script>
     <script type="text/javascript" src="js/buildTreeGraph.js"></script>
+    <script type="text/javascript" src="js/sortableElement.js"></script>
     <script type="text/javascript" src="js/tree.js"></script>
     <script type="text/javascript" src="js/buildCharts.js"></script>
     <script type="text/javascript" src="js/horizontalBars.js"></script>
