--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -2,8 +2,10 @@
 
 <head>
     <title>Flow Table Navigator</title>
+    
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="http://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet" type="text/css">
     <link href="http://cdn.datatables.net/responsive/1.0.6/css/dataTables.responsive.css" rel="stylesheet" type="text/css">
 
@@ -13,6 +15,7 @@
     <link href="css/horizontalBars.css" rel="stylesheet" type="text/css">
     <link href="css/tipsy.css" rel="stylesheet" type="text/css">
     <link href="css/focusContext.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap-select.min.css" type="text/css">
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/jquery.slidepanel.js"></script>
@@ -24,11 +27,13 @@
     <script type="text/javascript" src="http://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
     <script type="text/javascript" src="js/d3.min.js"></script>
     <script type="text/javascript" src="js/jquery.tipsy.js"></script>
+    <script src="js/scrollYou.js"></script>
+    <script type="text/javascript" src="js/bootstrap-select.min.js"></script>
 
     <script type="text/javascript" src="js/loadPanel.js"></script>
+    <script type="text/javascript" src="js/matchedField.js"></script>
     <script type="text/javascript" src="js/buildContent.js"></script>
     <script type="text/javascript" src="js/buildContentAdvanced.js"></script>
-    <script type="text/javascript" src="js/matchedField.js"></script>
     <script type="text/javascript" src="js/buildTreeGraph.js"></script>
     <script type="text/javascript" src="js/sortableElement.js"></script>
     <script type="text/javascript" src="js/tree.js"></script>
