--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -23,6 +23,7 @@
 
     <script src="js/scrollYou.js"></script>
     <script type="text/javascript" src="js/bootstrap-select.min.js"></script>
+    <script type="text/javascript" src="js/i18n/defaults-it_IT.min.js"></script>
 
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
