aggiunto il sorting

--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -16,10 +16,11 @@
     <link href="css/horizontalBars.css" rel="stylesheet" type="text/css">
     <link href="css/tipsy.css" rel="stylesheet" type="text/css">
     <link href="css/focusContext.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/jquery.slidepanel.js"></script>
-
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
     <script src="js/scrollYou.js"></script>
     <script type="text/javascript" src="js/bootstrap-select.min.js"></script>
