massiccio reworking sul codice per migliorarne la leggibilità

--- a/WebPage/index.html
+++ b/WebPage/index.html
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="js/jquery.tipsy.js"></script>
 
     <script type="text/javascript" src="js/loadPanel.js"></script>
+    <script type="text/javascript" src="js/listOfMatchedField.js"></script>
     <script type="text/javascript" src="js/matchedField.js"></script>
     <script type="text/javascript" src="js/buildContent.js"></script>
     <script type="text/javascript" src="js/buildTreeGraph.js"></script>
